[OE-6836] fix print text alignment

--- a/protected/assets/css/new_ui.css
+++ b/protected/assets/css/new_ui.css
@@ -1354,7 +1354,7 @@ button.warning:hover, button.cancel.event-action:hover, .button.cancel.event-act
   margin: 0;
   height: 38px;
   width: 40px;
-  text-indent: 500px;
+  color: transparent;
   background: transparent url("../img/_elements/btns/oe-print-icon.png") center center no-repeat;
 }
 
